--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="images/">
     <title>Splash</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
     </header>
 
     <section> 
-        <h1>Hello World!</h1>
+        <img src="images/header-image.jpeg" alt="swimming-club">
     </section>
 
 
