added header image

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
         </div>
     </header>
 
-    <section> 
-        <img src="images/header-image.jpeg" alt="swimming-club">
+    <section id="header-outer"> 
+        <div id="header-image"></div>
+        <div id="header-text">
+            <h3>Welcome to</h3>
+            <h2>Monson Swimming Club </h2>
+        </div>
     </section>
 
 
