--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
         </div>
     </section>
 
+    <section>
+        <p id="intro-text">We are a friendly competitive swimming club based in Kent. We cater for all abilities from swimming for fitness, to competitive
+            swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank highly nationally. 
+        </p>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
