--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     </header>
 
     <section id="header-outer"> 
-        <div id="header-image"></div>
+        <div id="header-image">
+            <img src="https://images.pexels.com/photos/863988/pexels-photo-863988.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+        </div>
         <div id="header-text">
             <h3>Welcome to</h3>
             <h2>Monson Swimming Club </h2>
