added intro text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="header-outer"> 
         <div id="header-image">
-            
+
         </div>
         <div id="header-text">
             <h3>Welcome to</h3>
@@ -62,7 +62,9 @@
 
     <section>
         <p id="intro-text">We are a friendly competitive swimming club based in Kent. We cater for all abilities from swimming for fitness, to competitive
-            swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank highly nationally. 
+            swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank well nationally. We train
+            at Monson Leisure Center and Valance School pool. We also have a Masters section, which caters for ex competitive swimmers or swimmers who used 
+            to swim regularly and want to get back into it. Masters also offers the options of competitive swimming and swimming for fitness. 
         </p>
     </section>
 
