--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="images/">
-    <title>Splash</title>
+    <title>MONSON SWIMMING CLUB</title>
 </head>
 <body>
     <!--Logo-->
     <header id="header-section">
         <a href="index.html">
-            <h2 id="logo">SPLASH</h2>
+            <h2 id="logo">MONSON</h2>
         </a>
         <!--NavBar for desktop, laptop, and tablet-->
         <div class="container">
@@ -51,9 +51,7 @@
     </header>
 
     <section id="header-outer"> 
-        <div id="header-image">
-
-        </div>
+        <div id="header-image"></div>
         <div id="header-text">
             <h3>Welcome to</h3>
             <h2>Monson Swimming Club </h2>
@@ -66,6 +64,22 @@
             at Monson Leisure Center and Valance School pool. We also have a Masters section, which caters for ex competitive swimmers or swimmers who used 
             to swim regularly and want to get back into it. Masters also offers the options of competitive swimming and swimming for fitness. 
         </p>
+    </section>
+
+    <section>
+        <div>
+            <h2 id="about-text">Why Swim With Us?</h2>
+        </div>
+    </section>
+    <section id="about-section">
+        <div>
+            <p>Why train with us?</p>
+        </div>
+        <div id="swimmer">
+            <img src="images/swimmer-image.png">
+        </div>
+    <section>
+
     </section>
 
 
