--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
     <section>
         <div>
-            <h2 id="about-text">Why Swim With Us?</h2>
+            <h2 id="about-sectiont">Why Swim With Us?</h2>
         </div>
     </section>
-    <section id="about-section">
-        <div>
+    <section>
+        <div id="about-text">
             <p>Why train with us?</p>
         </div>
         <div id="swimmer">
