--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
     </section>
 
     <section>
-        <div>
-            <h2 id="about-sectiont">Why Swim With Us?</h2>
+        <div id="about-header">
+            <h2>Why Swim With Us?</h2>
         </div>
     </section>
-    <section>
+
+    <section id="about-section">
         <div id="about-text">
             <p>Why train with us?</p>
         </div>
