--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <div id="about-text">
             <p>Why train with us?</p>
         </div>
-        <div id="swimmer">
-            <img src="images/swimmer-image.png">
+        <div>
+            <img id="swimmer" src="images/swimmer-image.png">
         </div>
     <section>
 
