updated hero image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     </header>
 
     <section id="header-outer"> 
-        <div id="header-image"></div>
+        <div>
+            <img id="header-image" src="images/hero-image.jpg">
+        </div>
         <div id="header-text">
             <h3>Welcome to</h3>
             <h2>Monson Swimming Club </h2>
