--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
     </section>
 
     <section>
-        <p id="intro-text">We are a friendly competitive swimming club based in Kent. We cater for all abilities from swimming for fitness, to competitive
-            swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank well nationally. We train
-            at Monson Leisure Center and Valance School pool. We also have a Masters section, which caters for ex competitive swimmers or swimmers who used 
-            to swim regularly and want to get back into it. Masters also offers the options of competitive swimming and swimming for fitness. 
-        </p>
+        <div id="intro-text">
+            <p>We are a friendly competitive swimming club based in Kent. We cater for all abilities from swimming for fitness, to competitive
+                swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank well nationally. We train
+                at Monson Leisure Center and Valance School pool. We also have a Masters section, which caters for ex competitive swimmers or swimmers who used 
+                to swim regularly and want to get back into it. Masters also offers the options of competitive swimming and swimming for fitness. 
+            </p>
+        </div>
     </section>
 
     <section>
