made about section mobile responsive

--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
 
     <section>
         <div id="about-header">
-            <h2>Why Swim With Us?</h2>
+            <h2>Why Train With Us?</h2>
         </div>
     </section>
 
     <section id="about-section">
-        <div id="about-text">
-            <p>Why train with us?</p>
-        </div>
+        <div id="left-container">
+            <div id="about-text">
+                <p>We are one of the highest ranking clubs in the UK and 2nd best ranked club in Kent. We train in a 50m pool that can be
+                    converted to a 25m pool, which means we can focus on stamina and endurance, while getting our swimmers used to swimming
+                    in a 50m pool, as well as the standard 25m.
+                </p>
+            </div>
+        </div>  
         <div>
             <img id="swimmer" src="images/swimmer-image.png">
         </div>
