--- a/index.html
+++ b/index.html
@@ -76,9 +76,16 @@
         </div>
         <div id="left-container">
             <div id="about-text">
-                <p>We are one of the highest ranking clubs in the UK and 2nd best ranked club in Kent. We train in a 50m pool that can be
-                    converted to a 25m pool, which means we can focus on stamina and endurance, while getting our swimmers used to swimming
-                    in a 50m pool, as well as the standard 25m.
+                <p>
+                    We are one of the highest ranking clubs in the UK and 2nd best ranked club in Kent. Our main pool (Monson Leisure Center)
+                    is a 50m pool that can be converted to a 25m pool, which means we can focus on stamina and endurance, whilst at the same
+                    time getting our swimmers used to swimming in a 50m pool, as well as the standard 25m. 
+                </p>
+                <p>
+                    We hold regular trial nights which we use to assess our swimmers times and let us know how they are doing in terms of
+                    performance. Our trial nights can also be used to assess new swimmers so we know which squad would best suit them, and
+                    whether they would prefer the Performance Pathway (our competitive pathway) or our Fitness Pathway (our casual swim and 
+                    fitness pathway through the club).
                 </p>
             </div>
         </div>  
