--- a/index.html
+++ b/index.html
@@ -80,12 +80,20 @@
                     We are one of the highest ranking clubs in the UK and 2nd best ranked club in Kent. Our main pool (Monson Leisure Center)
                     is a 50m pool that can be converted to a 25m pool, which means we can focus on stamina and endurance, whilst at the same
                     time getting our swimmers used to swimming in a 50m pool, as well as the standard 25m. 
+                    <br>
+                    Our other training location is Valance School pool, which is a standard 25m pool. 
                 </p>
                 <p>
                     We hold regular trial nights which we use to assess our swimmers times and let us know how they are doing in terms of
                     performance. Our trial nights can also be used to assess new swimmers so we know which squad would best suit them, and
                     whether they would prefer the Performance Pathway (our competitive pathway) or our Fitness Pathway (our casual swim and 
                     fitness pathway through the club).
+                </p>
+                <p>
+                    We also hold regular technicque cliniques which can be attended by swimmers from other clubs. These tend to run every
+                    3-4 months and have focus on one particular thing each time. For example, one clinic will focus on <b>starts and turns</b>, 
+                    while the next might focus on a particular <b>stroke</b>. Swimmers who attend these clinics say they are very useful and 
+                    informative. Please note, in order to attend these clinics you must be a member of either Monson or another swimming club.
                 </p>
             </div>
         </div>  
