made squads section

--- a/index.html
+++ b/index.html
@@ -100,8 +100,23 @@
         <div>
             <img id="swimmer" src="images/swimmer-image.png">
         </div>
-    <section>
+    </section>
 
+    <section>
+        <div id="squads-header">
+            <h2>Squads</h2>
+        </div>
+    </section>
+    <section id="squads">
+        <div class="squads">
+            <h4>Gold Squad</h4>
+        </div>
+        <div class="squads">
+            <h4>Silver Squad</h4>
+        </div>
+        <div class="squads">
+            <h4>Bronze Squad</h4>
+        </div>
     </section>
 
 
