added Gold Squad text

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
     <section id="squads">
         <div class="squads">
             <h4>Gold Squad</h4>
+            <p><b>Goals:</b> Compete at National and Internation Championships.
+            <br>
+            <b>Total Hours:</b>14 hours per week pool time, and 4 hours landtraining.
+            <br>
+            This is our top squad and aims to compete at the British Championships, with a view towards the European Swimming 
+            Championships and beyond. Swimmers are required to complete 3 hours landtraining and 12 hours pool time a week. 
+            </p>
         </div>
         <div class="squads">
             <h4>Silver Squad</h4>
