added silver and bronze squad text

--- a/index.html
+++ b/index.html
@@ -120,9 +120,22 @@
         </div>
         <div class="squads">
             <h4>Silver Squad</h4>
+            <p><b>Goals:</b>Compete at the Regional Championships.
+            <br>
+            <b>Total Hours:</b>10 hours pool time per week, and 3 hours landtraining.
+            <br>
+            This is our second top squad, and aims to compete at the regional championships, with a view to progressing to the 
+            National Championships. Swimmers must commit to 8 hours per week, and 2 hours land training.
+            </p>
         </div>
         <div class="squads">
             <h4>Bronze Squad</h4>
+            <p><b>Goals:</b>Compete at County Championships.
+            <br>
+            <b>Total Hours:</b> 8 hours pool time per week, and 2 hours landtraining.
+            <br>
+            This is our third highest top squad, and aims to compete at the county championships with a view to progressing to the
+            regional championships. Swimmers must commit to 7 hours a week, and 1 hour of land training.
         </div>
     </section>
 
