made squad section responsive on tablet

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="squad-header-section">
         <div id="squads-header">
             <h2>Squads</h2>
         </div>
