--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="images/">
     <title>MONSON SWIMMING CLUB</title>
@@ -102,11 +104,12 @@
         </div>
     </section>
 
-    <section id="squad-header-section">
+    <section id="blue-section">
         <div id="squads-header">
             <h2>Squads</h2>
         </div>
     </section>
+    
     <section id="squads">
         <div class="squads">
             <h4>Gold Squad</h4>
