updated header text on mobile

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section id="squads">
         <div class="squads">
             <h4>Gold Squad</h4>
-            <p><b>Goals:</b> Compete at National and Internation Championships.
+            <p><b>Goals:</b> Compete at National and International Championships.
             <br>
             <b>Total Hours:</b>14 hours per week pool time, and 4 hours landtraining.
             <br>
