added squads 2 section

--- a/index.html
+++ b/index.html
@@ -138,9 +138,43 @@
             <b>Total Hours:</b> 8 hours pool time per week, and 2 hours landtraining.
             <br>
             This is our third highest top squad, and aims to compete at the county championships with a view to progressing to the
-            regional championships. Swimmers must commit to 7 hours a week, and 1 hour of land training.
+            regional championships. Swimmers must commit to 7 hours a week, and 1 hour of land training. If a swimmer doesn't want to
+            compete, but wishes to train for fitness and to develop water confidence, we offer them a place in our Red Squad.
         </div>
     </section>
+
+    <section id="squads2">
+        <div class="squads2">
+            <h4>Blue 2</h4>
+            <p><b>Goals:</b> Learning to compete.
+            <br>
+            <b>Total Hours:</b> 5 hours per week pool time
+            <br>
+            This squad's primary aim is to develop race skills, such as learning pace control, and perfecting diving and turn technique.
+            Swimmers must commit to 4 hours a week.
+            </p>
+        </div>
+        <div class="squads2">
+            <h4>Blue 1</h4>
+            <p><b>Goals:</b>Improve swimming technique
+            <br>
+            <b>Total Hours:</b>3 hours per week pool time.
+            <br>
+            This squad's main focus is on swimming technqiue and learning the basics of diving and turning. The squad also focus on building
+            stamina and endurance. Swimmers must commit to 3 hours per week.
+            </p>
+        </div>
+        <div class="squads2">
+            <h4>Amber</h4>
+            <p><b>Goals:</b>Developing the basics of swimming technique.
+            <br>
+            <b>Total Hours:</b> 2 hour pool time per week.
+            <br>
+            This squad's main focus is to improve swimming technique and develop it. 
+        </div>
+    </section>
+
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
