--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             compete, but wishes to train for fitness and to develop water confidence, we offer them a place in our Red Squad.
         </div>
     </section>
+
     <section id="squads2">
         <div class="squads2">
             <h4>Blue 2</h4>
@@ -173,6 +174,36 @@
         </div>
     </section>
 
+    <section id="squads3">
+        <div class="squads3">
+            <h4>Academy 2</h4>
+            <p><b>Goals:</b> Learning to compete.
+            <br>
+            <b>Total Hours:</b> 5 hours per week pool time
+            <br>
+            This squad's primary aim is to develop race skills, such as learning pace control, and perfecting diving and turn technique.
+            Swimmers must commit to 4 hours a week.
+            </p>
+        </div>
+        <div class="squads3">
+            <h4>Academy 2</h4>
+            <p><b>Goals:</b>Improve swimming technique
+            <br>
+            <b>Total Hours:</b>3 hours per week pool time.
+            <br>
+            This squad's main focus is on swimming technqiue and learning the basics of diving and turning. The squad also focus on building
+            stamina and endurance. Swimmers must commit to 3 hours per week.
+            </p>
+        </div>
+        <div class="squads3">
+            <h4>Learn To Swim</h4>
+            <p><b>Goals:</b>Developing the basics of swimming technique.
+            <br>
+            <b>Total Hours:</b> 2 hour pool time per week.
+            <br>
+            This squad's main focus is to improve swimming technique and develop it. 
+        </div>
+    </section>
 
 
 
