adding text to the 3rd squads section

--- a/index.html
+++ b/index.html
@@ -166,42 +166,40 @@
         </div>
         <div class="squads2">
             <h4>Amber</h4>
-            <p><b>Goals:</b>Developing the basics of swimming technique.
+            <p><b>Goals:</b>Developing swimming technique and improving stamina. 
             <br>
             <b>Total Hours:</b> 2 hour pool time per week.
             <br>
-            This squad's main focus is to improve swimming technique and develop it. 
+            This squad's main focus is to continue improving swimming technique and develop it, and stamina.
         </div>
     </section>
 
     <section id="squads3">
         <div class="squads3">
             <h4>Academy 2</h4>
-            <p><b>Goals:</b> Learning to compete.
+            <p><b>Goals:</b> Learning to develop water confidence.
             <br>
-            <b>Total Hours:</b> 5 hours per week pool time
+            <b>Total Hours:</b> 1x 1 hour session and 1x 30 minute sessions per week pool time
             <br>
-            This squad's primary aim is to develop race skills, such as learning pace control, and perfecting diving and turn technique.
-            Swimmers must commit to 4 hours a week.
+            The main focus is on building stamina, and continuing the develop stroke technique. 
             </p>
         </div>
         <div class="squads3">
-            <h4>Academy 2</h4>
-            <p><b>Goals:</b>Improve swimming technique
+            <h4>Academy 1</h4>
+            <p><b>Goals:</b>Developing water confidence.
             <br>
-            <b>Total Hours:</b>3 hours per week pool time.
+            <b>Total Hours:</b> 2x 30 mins per week pool time.
             <br>
-            This squad's main focus is on swimming technqiue and learning the basics of diving and turning. The squad also focus on building
-            stamina and endurance. Swimmers must commit to 3 hours per week.
+            The main focus is on building water confidence and beginning to focus on technique. 
             </p>
         </div>
         <div class="squads3">
             <h4>Learn To Swim</h4>
-            <p><b>Goals:</b>Developing the basics of swimming technique.
+            <p><b>Goals:</b>Learning to develop water confidence.
             <br>
-            <b>Total Hours:</b> 2 hour pool time per week.
+            <b>Total Hours:</b> 30 mins pool time per week.
             <br>
-            This squad's main focus is to improve swimming technique and develop it. 
+            Focus here is on starting to learn to swim, and become confident in the water, and under it. 
         </div>
     </section>
 
