added 4th squad section

--- a/index.html
+++ b/index.html
@@ -199,10 +199,35 @@
             <br>
             <b>Total Hours:</b> 30 mins pool time per week.
             <br>
-            Focus here is on starting to learn to swim, and become confident in the water, and under it. 
+            This is our entry level squad. The main focus is on starting to learn to swim, and become confident in the water, and under it. 
         </div>
     </section>
 
+    <section id="squads4">
+        <div class="squads4">
+            <h4>Red Squad</h4>
+            <p><b>Goals:</b> Swimming for fitness
+            <br>
+            <b>Total Hours:</b> 4 hours per week
+            <br>
+            If someone has decided they don't want to compete, then swimmers can join our red squad which swim 4 hours a week and are a diverse mix
+            of teenagers who are swimming for the fitness side of things rather than competing. The main focus is on building stamina, continuing the 
+            develop stroke technique, but without any of the pressures of competing. Please note, red Squad is for swimmers under the age of 18, at 18
+            swimmers will move to Masters squad.
+            </p>
+        </div>
+        <div class="squads4">
+            <h4>Masters</h4>
+            <p><b>Goals:</b>Swimming for fitness with the option of competing.
+            <br>
+            <b>Total Hours:</b> 2 hours per week.
+            <br>
+            Masters is for people 18+ who are ex club swimmers, or keen adult swimmers who ant to swim for fitness, but may look to compete. 
+            MAsters does offer pointers on how to improve technique and and diving and turns, however Masters is not the same as learning to 
+            swim for adults, so swimmers must be proficient in freestyle, possibly backstroke, and confident in the water. 
+            </p>
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
