added fitness squads section

--- a/index.html
+++ b/index.html
@@ -216,6 +216,16 @@
             swimmers will move to Masters squad.
             </p>
         </div>
+        <div>
+            <img id="fitness-image" src="images/fitness-image.JPG">
+        </div>
+    </section>
+
+    <section>
+        <h2 id="fitness-squads">Fitness Squads</h2>
+    </section>
+    
+    <section id="squads5">
         <div class="squads4">
             <h4>Masters</h4>
             <p><b>Goals:</b>Swimming for fitness with the option of competing.
