centers fitness squads text

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <section id="blue-section">
         <div id="squads-header">
-            <h2>Squads</h2>
+            <h2> Performance Squads</h2>
         </div>
     </section>
     
@@ -222,9 +222,11 @@
     </section>
 
     <section>
-        <h2 id="fitness-squads">Fitness Squads</h2>
+        <div id="fitness-squads">
+            <h2>Fitness Squads</h2>
+        </div>
     </section>
-    
+
     <section id="squads5">
         <div class="squads4">
             <h4>Masters</h4>
