--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
             <br>
             <b>Total Hours:</b> 4 hours per week
             <br>
-            If someone has decided they don't want to compete, then swimmers can join our red squad which swim 4 hours a week and are a diverse mix
-            of teenagers who are swimming for the fitness side of things rather than competing. The main focus is on building stamina, continuing the 
-            develop stroke technique, but without any of the pressures of competing. Please note, red Squad is for swimmers under the age of 18, at 18
-            swimmers will move to Masters squad.
+            <p id="red-squad">If someone has decided they don't want to compete, then swimmers can join our red squad which swim 4 hours a week and are a 
+                diverse mix of teenagers who are swimming for the fitness side of things rather than competing. The main focus is on building 
+                stamina, and continuing the develop stroke technique, but without any of the pressures of competing. Please note, red Squad 
+                is for swimmers under the age of 18, at 18 swimmers will move to Masters squad.
             </p>
             <h4>Masters</h4>
             <p><b>Goals:</b>Swimming for fitness with the option of competing.
@@ -230,6 +230,9 @@
         </div>
     </section>
 
+    <section>
+        <h2 id="timetable">Timetable:</h2>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
