--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
     <section>
         <div id="intro-text">
             <p>We are a friendly competitive swimming club based in Kent. We cater for all abilities from swimming for fitness, to competitive
-                swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank well nationally. We train
-                at Monson Leisure Center and Valance School pool. We also have a Masters section, which caters for ex competitive swimmers or swimmers who used 
-                to swim regularly and want to get back into it. Masters also offers the options of competitive swimming and swimming for fitness. 
+                swimming. Our swimmers compete regularly in county, regional and national competitions, and frequently rank well nationally. We 
+                train at Monson Leisure Center, Valance School pool and Monson School Pool. We also have a Masters section, which caters for ex competitive swimmers 
+                or swimmers who used to swim regularly and want to get back into it. Masters also offers the options of competitive swimming 
+                and swimming for fitness. 
             </p>
         </div>
     </section>
@@ -233,7 +234,22 @@
     <section>
         <h2 id="timetable">Timetable:</h2>
     </section>
+        <div>
+            <table>
+                <tr>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                    <th>Sunday</th>
+                </tr>
+            </table>
+        </div>
+    <section>
 
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
