--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
         <h2 id="timetable">Timetable:</h2>
     </section>
         <div>
-            <table>
+            <table id="table">
                 <tr>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                    <th>Sunday</th>
+                    <th class="headers">Monday</th>
+                    <th class="headers">Tuesday</th>
+                    <th class="headers">Wednesday</th>
+                    <th class="headers">Thursday</th>
+                    <th class="headers">Friday</th>
+                    <th class="headers">Saturday</th>
+                    <th class="headers">Sunday</th>
                 </tr>
             </table>
         </div>
