added first squad to table

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         <div>
             <table id="table">
                 <tr>
+                    <th></th>
                     <th class="headers">Monday</th>
                     <th class="headers">Tuesday</th>
                     <th class="headers">Wednesday</th>
@@ -244,6 +245,16 @@
                     <th class="headers">Friday</th>
                     <th class="headers">Saturday</th>
                     <th class="headers">Sunday</th>
+                </tr>
+                <tr>
+                    <td>Gold</td>
+                    <td>5-7am MLC & 7-9 Valence School</td>
+                    <td>6-7 (Landtraining) 7-9 MLC</td>
+                    <td>No Training</td>
+                    <td>6-7 (Landtraining) 7-9 MLC</td>
+                    <td>5-7am MLC 7-9 MLC</td>
+                    <td>6-8am MLC</td>
+                    <td>5-7 (landtraining) 7-9 MLC</td>
                 </tr>
             </table>
         </div>
