added padding to cells

--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@
                     <th class="headers">Sunday</th>
                 </tr>
                 <tr>
-                    <td>Gold</td>
-                    <td>5-7am MLC & 7-9 Valence School</td>
-                    <td>6-7 (Landtraining) 7-9 MLC</td>
-                    <td>No Training</td>
-                    <td>6-7 (Landtraining) 7-9 MLC</td>
-                    <td>5-7am MLC 7-9 MLC</td>
-                    <td>6-8am MLC</td>
-                    <td>5-7 (landtraining) 7-9 MLC</td>
+                    <td class="training">Gold</td>
+                    <td class="training">5-7am MLC & 7-9 Valence School</td>
+                    <td class="training">6-7 (Landtraining) 7-9 MLC</td>
+                    <td class="training">No Training</td>
+                    <td class="training">6-7 (Landtraining) 7-9 MLC</td>
+                    <td class="training">5-7am MLC 7-9 MLC</td>
+                    <td class="training">6-8am MLC</td>
+                    <td class="training">5-7 (landtraining) 7-9 MLC</td>
                 </tr>
             </table>
         </div>
