made table responsive

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section>
         <h2 id="timetable">Timetable:</h2>
     </section>
-        <div>
+        <div style="overflow-x:auto">
             <table id="table">
                 <tr>
                     <th></th>
