added padding to headers on mobile

--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
                 </tr>
                 <tr>
                     <td class="training">Gold</td>
-                    <td class="training">5-7am MLC & 7-9 Valence School</td>
-                    <td class="training">6-7 (Landtraining) 7-9 MLC</td>
+                    <td class="training">5-7am MLC & 7-9pm Valence School</td>
+                    <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
                     <td class="training">No Training</td>
-                    <td class="training">6-7 (Landtraining) 7-9 MLC</td>
-                    <td class="training">5-7am MLC 7-9 MLC</td>
+                    <td class="training">6-7pm (Landtraining) 7-9am MLC</td>
+                    <td class="training">5-7am MLC 7-9pm MLC</td>
                     <td class="training">6-8am MLC</td>
-                    <td class="training">5-7 (landtraining) 7-9 MLC</td>
+                    <td class="training">5-7pm (landtraining) 7-9pm MLC</td>
                 </tr>
             </table>
         </div>
