added silver squad to table

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h4>Gold Squad</h4>
             <p><b>Goals:</b> Compete at National and International Championships.
             <br>
-            <b>Total Hours:</b>14 hours per week pool time, and 4 hours landtraining.
+            <b>Total Hours:</b>16 hours per week pool time, and 4 hours landtraining.
             <br>
             This is our top squad and aims to compete at the British Championships, with a view towards the European Swimming 
             Championships and beyond. Swimmers are required to complete 3 hours landtraining and 12 hours pool time a week. 
@@ -126,10 +126,10 @@
             <h4>Silver Squad</h4>
             <p><b>Goals:</b>Compete at the Regional Championships.
             <br>
-            <b>Total Hours:</b>10 hours pool time per week, and 3 hours landtraining.
+            <b>Total Hours:</b>12 hours pool time per week, and 3 hours landtraining.
             <br>
             This is our second top squad, and aims to compete at the regional championships, with a view to progressing to the 
-            National Championships. Swimmers must commit to 8 hours per week, and 2 hours land training.
+            National Championships. Swimmers must commit to 10 hours per week, and 2 hours land training.
             </p>
         </div>
         <div class="squads">
@@ -251,10 +251,20 @@
                     <td class="training">5-7am MLC & 7-9pm Valence School</td>
                     <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
                     <td class="training">No Training</td>
-                    <td class="training">6-7pm (Landtraining) 7-9am MLC</td>
+                    <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
                     <td class="training">5-7am MLC 7-9pm MLC</td>
                     <td class="training">6-8am MLC</td>
                     <td class="training">5-7pm (landtraining) 7-9pm MLC</td>
+                </tr>
+                <tr>
+                    <td class="training">Silver</td>
+                    <td class="training">7-9pm Valence School</td>
+                    <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
+                    <td class="training">5-7am MLC 8-9pm MLC</td>
+                    <td class="training">6-8am MLC</td>
+                    <td class="training">6-7pm (landtraining) 7-9pm MLC</td>
                 </tr>
             </table>
         </div>
