added bronze squad to table

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h4>Bronze Squad</h4>
             <p><b>Goals:</b>Compete at County Championships.
             <br>
-            <b>Total Hours:</b> 8 hours pool time per week, and 2 hours landtraining.
+            <b>Total Hours:</b> 10 hours pool time per week, and 2 hours landtraining.
             <br>
             This is our third highest top squad, and aims to compete at the county championships with a view to progressing to the
             regional championships. Swimmers must commit to 7 hours a week, and 1 hour of land training. If a swimmer doesn't want to
@@ -258,13 +258,23 @@
                 </tr>
                 <tr>
                     <td class="training">Silver</td>
-                    <td class="training">7-9pm Valence School</td>
+                    <td class="training">6-7am MLC 7-9pm Valence School</td>
                     <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
-                    <td class="training">7-8pm MLC</td>
+                    <td class="training">No training</td>
                     <td class="training">6-7pm (Landtraining) 7-9pm MLC</td>
                     <td class="training">5-7am MLC 8-9pm MLC</td>
                     <td class="training">6-8am MLC</td>
                     <td class="training">6-7pm (landtraining) 7-9pm MLC</td>
+                </tr>
+                <tr>
+                    <td class="training">Bronze</td>
+                    <td class="training">7-9pm Monson School</td>
+                    <td class="training">6-7pm (Landtraining) 7-9 Valence</td>
+                    <td class="training">8-9pm MLC</td>
+                    <td class="training">6-7pm (Landtraining) 7-9 Valence</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">No training</td>
+                    <td class="training">5-7pm MLC</td>
                 </tr>
             </table>
         </div>
