added Blue 2 to table

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h4>Blue 2</h4>
             <p><b>Goals:</b> Learning to compete.
             <br>
-            <b>Total Hours:</b> 5 hours per week pool time
+            <b>Total Hours:</b> 8 hours per week pool time
             <br>
             This squad's primary aim is to develop race skills, such as learning pace control, and perfecting diving and turn technique.
             Swimmers must commit to 4 hours a week.
@@ -159,7 +159,7 @@
             <h4>Blue 1</h4>
             <p><b>Goals:</b>Improve swimming technique
             <br>
-            <b>Total Hours:</b>3 hours per week pool time.
+            <b>Total Hours:</b>6 hours per week pool time.
             <br>
             This squad's main focus is on swimming technqiue and learning the basics of diving and turning. The squad also focus on building
             stamina and endurance. Swimmers must commit to 3 hours per week.
@@ -169,7 +169,7 @@
             <h4>Amber</h4>
             <p><b>Goals:</b>Developing swimming technique and improving stamina. 
             <br>
-            <b>Total Hours:</b> 2 hour pool time per week.
+            <b>Total Hours:</b> 4 hour pool time per week.
             <br>
             This squad's main focus is to continue improving swimming technique and develop it, and stamina.
         </div>
@@ -272,6 +272,16 @@
                     <td class="training">6-7pm (Landtraining) 7-9 Valence</td>
                     <td class="training">8-9pm MLC</td>
                     <td class="training">6-7pm (Landtraining) 7-9 Valence</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">No training</td>
+                    <td class="training">5-7pm MLC</td>
+                </tr>
+                <tr>
+                    <td class="training">Blue 2</td>
+                    <td class="training">7-8pm Monson School</td>
+                    <td class="training">7-8 Monson School</td>
+                    <td class="training">6-8pm MLC</td>
+                    <td class="training">7-8 Valence</td>
                     <td class="training">7-8pm MLC</td>
                     <td class="training">No training</td>
                     <td class="training">5-7pm MLC</td>
