added rest of squads to time table

--- a/index.html
+++ b/index.html
@@ -286,6 +286,56 @@
                     <td class="training">No training</td>
                     <td class="training">5-7pm MLC</td>
                 </tr>
+                <tr>
+                    <td class="training">Blue 1</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">7-8 MLC</td>
+                    <td class="training">6-8pm MLC</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">No training</td>
+                    <td class="training">No Training</td>
+                </tr>
+                <tr>
+                    <td class="training">Amber</td>
+                    <td class="training">7-8pm MLC</td>
+                    <td class="training">7-8 MLC</td>
+                    <td class="training">No Training</td>
+                    <td class="training">7-8pm Monson School</td>
+                    <td class="training">7-8pm Monson School</td>
+                    <td class="training">No training</td>
+                    <td class="training">No Training</td>
+                </tr>
+                <tr>
+                    <td class="training">Academy 2</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">5-6pm MLC</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">8:30-9:00am</td>
+                    <td class="training">9:30-10:00am</td>
+                </tr>
+                <tr>
+                    <td class="training">Academy 1</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">5:00-5:30pm MLC</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">9:00-9:30</td>
+                    <td class="training">No Training</td>
+                </tr>
+                <tr>
+                    <td class="training">Learn To Swim</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">9:30-10:00am MLC</td>
+                    <td class="training">No Training</td>
+                </tr>
             </table>
         </div>
     <section>
