added masters and red squad to table

--- a/index.html
+++ b/index.html
@@ -336,6 +336,26 @@
                     <td class="training">9:30-10:00am MLC</td>
                     <td class="training">No Training</td>
                 </tr>
+                <tr>
+                    <td class="training">Red Squad</td>
+                    <td class="training">8-9pm MLC</td>
+                    <td class="training">No Training</td>
+                    <td class="training">5-7pm Valence School</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">8:00-9:00/td>
+                    <td class="training">No Training</td>
+                </tr>
+                <tr>
+                    <td class="training">Masters</td>
+                    <td class="training">8:00-9:00pm MLC</td>
+                    <td class="training">No Training</td>
+                    <td class="training">No Training</td>
+                    <td class="training">8:00-9:00 Monson School</td>
+                    <td class="training">No Training</td>
+                    <td class="training">8:30-9:00am</td>
+                    <td class="training">No Training</td>
+                </tr>
             </table>
         </div>
     <section>
