updated pool timetable

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <h4>Academy 2</h4>
             <p><b>Goals:</b> Learning to develop water confidence.
             <br>
-            <b>Total Hours:</b> 1x 1 hour session and 1x 30 minute sessions per week pool time
+            <b>Total Hours:</b> 3 hours  per week pool time
             <br>
             The main focus is on building stamina, and continuing the develop stroke technique. 
             </p>
@@ -189,7 +189,7 @@
             <h4>Academy 1</h4>
             <p><b>Goals:</b>Developing water confidence.
             <br>
-            <b>Total Hours:</b> 2x 30 mins per week pool time.
+            <b>Total Hours:</b> 2 hours per week pool time.
             <br>
             The main focus is on building water confidence and beginning to focus on technique. 
             </p>
@@ -198,7 +198,7 @@
             <h4>Learn To Swim</h4>
             <p><b>Goals:</b>Learning to develop water confidence.
             <br>
-            <b>Total Hours:</b> 30 mins pool time per week.
+            <b>Total Hours:</b> 1 hour pool time per week.
             <br>
             This is our entry level squad. The main focus is on starting to learn to swim, and become confident in the water, and under it. 
         </div>
@@ -313,18 +313,18 @@
                     <td class="training">5-6pm MLC</td>
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
-                    <td class="training">8:30-9:00am</td>
-                    <td class="training">9:30-10:00am</td>
+                    <td class="training">8:30-9:30am</td>
+                    <td class="training">10:00 11:00am</td>
                 </tr>
                 <tr>
                     <td class="training">Academy 1</td>
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
-                    <td class="training">5:00-5:30pm MLC</td>
+                    <td class="training">5:00-6:00pm MLC</td>
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
-                    <td class="training">9:00-9:30</td>
                     <td class="training">No Training</td>
+                    <td class="training">4-6pm MLC</td>
                 </tr>
                 <tr>
                     <td class="training">Learn To Swim</td>
@@ -333,7 +333,7 @@
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
-                    <td class="training">9:30-10:00am MLC</td>
+                    <td class="training">9:30-10:30am MLC</td>
                     <td class="training">No Training</td>
                 </tr>
                 <tr>
@@ -343,7 +343,7 @@
                     <td class="training">5-7pm Valence School</td>
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
-                    <td class="training">8:00-9:00/td>
+                    <td class="training">8:00-9:00am MLC</td>
                     <td class="training">No Training</td>
                 </tr>
                 <tr>
