added screenshot of performance bug

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section id="blue-section">
+    <section id="squad-section">
         <div id="squads-header">
             <h2>Performance Squads</h2>
         </div>
