--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
                 <tr>
                     <td class="training">Blue 2</td>
                     <td class="training">7-8pm Monson School</td>
-                    <td class="training">7-8 Monson School</td>
+                    <td class="training">7-8pm Monson School</td>
                     <td class="training">6-8pm MLC</td>
-                    <td class="training">7-8 Valence</td>
+                    <td class="training">7-8pm Valence</td>
                     <td class="training">7-8pm MLC</td>
                     <td class="training">No training</td>
                     <td class="training">5-7pm MLC</td>
@@ -351,9 +351,9 @@
                     <td class="training">8:00-9:00pm MLC</td>
                     <td class="training">No Training</td>
                     <td class="training">No Training</td>
-                    <td class="training">8:00-9:00 Monson School</td>
+                    <td class="training">8:00-9:00pm Monson School</td>
+                    <td class="training">8:00-9:00pm Monson School</td>
                     <td class="training">No Training</td>
-                    <td class="training">8:30-9:00am</td>
                     <td class="training">No Training</td>
                 </tr>
             </table>
