--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <h4>Masters</h4>
             <p><b>Goals:</b>Swimming for fitness with the option of competing.
             <br>
-            <b>Total Hours:</b> 2 hours per week.
+            <b>Total Hours:</b> 3 hours per week.
             <br>
             Masters is for people 18+ who are ex club swimmers, or keen adult swimmers who ant to swim for fitness, but may look to compete. 
             MAsters does offer pointers on how to improve technique and and diving and turns, however Masters is not the same as learning to 
@@ -234,6 +234,7 @@
     <section>
         <h2 id="timetable">Timetable:</h2>
     </section>
+    <section>
         <div style="overflow-x:auto">
             <table id="table">
                 <tr>
@@ -358,8 +359,19 @@
                 </tr>
             </table>
         </div>
+    </section>
     <section>
-
+        <div id="contact">
+            <h2> Contact Form</h2>
+        </div>
+    </section>
+    <section>
+        <div id="form">
+            <form>
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name"><br>
+            </form>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
