added contact form and image

--- a/index.html
+++ b/index.html
@@ -370,6 +370,10 @@
             <form>
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name"><br>
+                <label for="email">Email:</label><br>
+                <input type="text" id="email" name="email"><br>
+                <label for="submit">Send</label><br>
+                <input type="submit" id="submit" name="submit"><br>
             </form>
         </div>
     </section>
