aligned photo and form on site

--- a/index.html
+++ b/index.html
@@ -365,7 +365,11 @@
             <h2> Contact Form</h2>
         </div>
     </section>
-    <section>
+
+    <section id="contact-section">
+        <div>
+            <img id="contact-image" src="images/contact-image.jpeg">
+        </div>
         <div id="form">
             <form>
                 <label for="name">Name:</label><br>
