--- a/index.html
+++ b/index.html
@@ -232,11 +232,14 @@
     </section>
 
     <section>
-        <h2 id="timetable">Timetable:</h2>
+        <h2 id="timetable">Timetables:</h2>
     </section>
     <section>
+        <div class="squad-table">
+            <h2>Performance Squads Timetable:</h2>
+        </div>
         <div style="overflow-x:auto">
-            <table id="table">
+            <table class="table">
                 <tr>
                     <th></th>
                     <th class="headers">Monday</th>
@@ -277,6 +280,19 @@
                     <td class="training">No training</td>
                     <td class="training">5-7pm MLC</td>
                 </tr>
+            </table>
+        </div>
+        <div style="overflow-x:auto">
+            <table class="table">
+                <th>
+                    <th class="headers">Monday</th>
+                    <th class="headers">Tuesday</th>
+                    <th class="headers">Wednesday</th>
+                    <th class="headers">Thursday</th>
+                    <th class="headers">Friday</th>
+                    <th class="headers">Saturday</th>
+                    <th class="headers">Sunday</th>
+                </th>
                 <tr>
                     <td class="training">Blue 2</td>
                     <td class="training">7-8pm Monson School</td>
@@ -307,6 +323,19 @@
                     <td class="training">No training</td>
                     <td class="training">No Training</td>
                 </tr>
+            </table>
+        </div>
+        <div style="overflow-x:auto">
+            <table class="table">
+                <th>
+                    <th class="headers">Monday</th>
+                    <th class="headers">Tuesday</th>
+                    <th class="headers">Wednesday</th>
+                    <th class="headers">Thursday</th>
+                    <th class="headers">Friday</th>
+                    <th class="headers">Saturday</th>
+                    <th class="headers">Sunday</th>
+                </th>
                 <tr>
                     <td class="training">Academy 2</td>
                     <td class="training">No Training</td>
@@ -337,6 +366,10 @@
                     <td class="training">9:30-10:30am MLC</td>
                     <td class="training">No Training</td>
                 </tr>
+            </table>
+        </div>
+        <div style="overflow-x:auto">
+            <table class="table">
                 <tr>
                     <td class="training">Red Squad</td>
                     <td class="training">8-9pm MLC</td>
