--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </section>
     <section>
         <div class="squad-table">
-            <h2>Performance Squads Timetable:</h2>
+            <h2>Performance Squads Timetables:</h2>
         </div>
         <div style="overflow-x:auto">
             <table class="table">
@@ -283,6 +283,9 @@
             </table>
         </div>
         <div style="overflow-x:auto">
+            <div class="squad-table">
+                <h2>Development Squads Timetables:</h2>
+            </div>
             <table class="table">
                 <th>
                     <th class="headers">Monday</th>
@@ -326,6 +329,9 @@
             </table>
         </div>
         <div style="overflow-x:auto">
+            <div class="squad-table">
+                <h2>Academy & Learn To Swim Timetables:</h2>
+            </div>
             <table class="table">
                 <th>
                     <th class="headers">Monday</th>
@@ -369,6 +375,9 @@
             </table>
         </div>
         <div style="overflow-x:auto">
+            <div class="squad-table">
+                <h2>Fitness & Masters Timetables:</h2>
+            </div>
             <table class="table">
                 <tr>
                     <td class="training">Red Squad</td>
